--- a/DOM/1.html
+++ b/DOM/1.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM leraing </title>
 </head>
-<body>
+<body >
     <div class="bg-black">
-        <h1 class="heading">DOM learningh on Chai aur code </h1>
+        <h1 id ="title" class="heading">DOM learningh on Chai aur code 
+            <span style="display: none;"> Rocky Bhai </span>
+        </h1>
+
+        <h1> Rock 1 </h1>
+
+        <h1> Rock 2 </h1>
+
+        <h1> Rock 3 </h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
     </div>
 </body>
 </html>
+
+
+<!-- "innerText" vaneko webpage show huni Text horu hor
+
+"textContent" le incase css or styling use garera hide gareko TEXT lai ni show gar din cha 
+
+"innerHTML" le purai html ko value dincha not only text with Tag dincha 
+
+"innerText" and "textContent" le HTML tag support gardena  -->
