add also some content

--- a/DOM/1.html
+++ b/DOM/1.html
@@ -22,10 +22,44 @@
 </html>
 
 
-<!-- "innerText" vaneko webpage show huni Text horu hor
+<!-- 
+Some of the method are using below:
+
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+kunai element lai select  garni bela we using:
+
+"document.getElementById (parameter)" 
+
+"document.getClasssName (parameter)"
+
+Select gare pachi . use garera different different element horu excess garna sakincha
+
+
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+Content add garni kun 
+
+
+"innerText" vaneko webpage show huni Text horu hor
 
 "textContent" le incase css or styling use garera hide gareko TEXT lai ni show gar din cha 
 
 "innerHTML" le purai html ko value dincha not only text with Tag dincha 
 
-"innerText" and "textContent" le HTML tag support gardena  -->
+"innerText" and "textContent" le HTML tag support gardena  
+
+
+
+"getAttribute" value paincha 
+
+"setAttribute" value set garni ho 
+
+
+
+
+
+"QuerySelector le only one value pass garcha "
+"NODE List" and "HTML COllection" are not a pure array but look like array, some behaviour matched with array.
+ REMEMBER!! that by deafult array has map and foreach property
+
+-->
