--- a/DOM/1.html
+++ b/DOM/1.html
@@ -8,15 +8,23 @@
 <body >
     <div class="bg-black">
         <h1 id ="title" class="heading">DOM learningh on Chai aur code 
-            <span style="display: none;"> Rocky Bhai </span>
+            <span > Rocky Bhai </span>
         </h1>
 
-        <h1> Rock 1 </h1>
+        <h2> Rock 1 </h2>
 
-        <h1> Rock 2 </h1>
+        <h2> Rock 2 </h2>
 
-        <h1> Rock 3 </h1>
+        <h2> Rock 3 </h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+            <li>four</li>
+            <li>five</li>
+        </ul>
     </div>
 </body>
 </html>
@@ -37,28 +45,35 @@ Select gare pachi . use garera different different element horu excess garna sak
 
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
-Content add garni kun 
+-- -------  Content add or changed garni bela 
 
 
 "innerText" vaneko webpage show huni Text horu hor
 
 "textContent" le incase css or styling use garera hide gareko TEXT lai ni show gar din cha 
 
-"innerHTML" le purai html ko value dincha not only text with Tag dincha 
+"innerHTML" le purai html ko value dincha not only text with Tag dincha. Tag horu use garera kei manupulate garincha vane yo INNHTML tag use garin cha 
 
-"innerText" and "textContent" le HTML tag support gardena  
+"innerText" and "textContent" le HTML tag suppo rt gardena  
+
+Eni horu function haina so = symbol use gare huncha 
+
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+"getAttribute()" value paincha 
+
+"setAttribute()" value set garni ho 
 
 
 
-"getAttribute" value paincha 
 
-"setAttribute" value set garni ho 
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+Query Selector 
+
+"QuerySelector() le only one value pass garcha which is 1st wala value pass garcha "
 
 
 
-
-
-"QuerySelector le only one value pass garcha "
 "NODE List" and "HTML COllection" are not a pure array but look like array, some behaviour matched with array.
  REMEMBER!! that by deafult array has map and foreach property
 
